--- a/packages.config
+++ b/packages.config
@@ -22,5 +22,6 @@
   <package id="PagedList" version="1.17.0.0" targetFramework="net48" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="toastr" version="2.1.1" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
