se mejora la interfaz grafica agregando solo algunos elementos de diseño para  que tenga una mejor apariencia.

--- a/TrainingDBase5ticg3.csproj
+++ b/TrainingDBase5ticg3.csproj
@@ -205,6 +205,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\fonts-roboto.css" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\paginacion.css" />
     <Content Include="Content\toastr.css" />
