se agrega elementos de interfaz grafica para el perfil del usuario.

--- a/TrainingDBase5ticg3.csproj
+++ b/TrainingDBase5ticg3.csproj
@@ -276,6 +276,7 @@
     <Content Include="Views\Personas\Edit.cshtml" />
     <Content Include="Views\Personas\Index.cshtml" />
     <Content Include="Views\profesiones\Paginacion.cshtml" />
+    <Content Include="Views\Personas\Perfil.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
